examples/invalid/semantics/ignored_error.aru
module examples.invalid.semantics.ignoredError

func openConfig(path: str) : Result<str, Err> {
    return Result.Ok("config")
}

func main() {
    // expected: semantic error; Result must be handled.
    let config = openConfig("app.toml")
}